--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <!-- Botão do WhatsApp -->
     <a href="#" class="whatsapp-float">
-        <img src="assets/images/whatsapp-icon.png" alt="WhatsApp">
+        <img src="assets/whatsapp.png" alt="WhatsApp">
     </a>
 
     <script src="js/script.js"></script>
