--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Arlene Melonio - Técnica em Estética e futura Biomédica Esteta. Tratamentos faciais e corporais personalizados com abordagem científica.">
     <title>Arlene Melonio - Estética & Biomedicina Estética</title>
-    <link rel="icon" type="image/png" href="/assets/icon.jpg">
+    <link rel="icon" type="image/jpg" href="/assets/icon.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
